feat:BSI-2 add MssqlAdapter, create select/combobox to choose db

--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -121,6 +121,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\BaselinkerAdapter.cs" />
+    <Compile Include="Adapters\MssqlAdapter.cs" />
+    <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
     <Compile Include="Objects\Baselinker\Storages\BaselinkerStoragesResponse.cs" />
