--- a/BaselinkerSubiektConnector/packages.config
+++ b/BaselinkerSubiektConnector/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Spire.PDF" version="10.3.7" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
