--- a/BaselinkerSubiektConnector/packages.config
+++ b/BaselinkerSubiektConnector/packages.config
@@ -9,4 +9,5 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="WpfMessageBox" version="1.2.0" targetFramework="net472" />
 </packages>
