move to database configuration

--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
     <Compile Include="Objects\Baselinker\Storages\BaselinkerStoragesResponse.cs" />
+    <Compile Include="Objects\SQLite\SQLiteConfigObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektBranchObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektCashRegisterObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteBaselinkerWarehouseObject.cs" />
@@ -280,6 +281,7 @@
     <Compile Include="RegistryConfigurationKeys.cs" />
     <Compile Include="RegistryManager.cs" />
     <Compile Include="Repositories\DeliveryAssortmentRepository.cs" />
+    <Compile Include="Repositories\SQLite\ConfigRepository.cs" />
     <Compile Include="Repositories\SQLite\SubiektBranches.cs" />
     <Compile Include="Repositories\SQLite\SubiektCashRegisters.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerWarehouses.cs" />
