--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Objects\SQLite\SQLiteBaselinkerWarehouseObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektWarehouseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\ConfigValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
