email about problem to create selldoc

--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -255,6 +255,7 @@
   <ItemGroup>
     <Compile Include="Adapters\BaselinkerAdapter.cs" />
     <Compile Include="Adapters\MssqlAdapter.cs" />
+    <Compile Include="Builders\Emails\EmaiReportError.cs" />
     <Compile Include="Builders\SubiektInvoiceReceiptGenerator.cs" />
     <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
