--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -257,6 +257,9 @@
     <Compile Include="Adapters\MssqlAdapter.cs" />
     <Compile Include="Builders\Emails\EmaiReportError.cs" />
     <Compile Include="Builders\SubiektInvoiceReceiptGenerator.cs" />
+    <Compile Include="Composites\BaselinkerSQLiteProductSyncComposite.cs" />
+    <Compile Include="Objects\Baselinker\Inventory\InventoryProductListResponse.cs" />
+    <Compile Include="Objects\Baselinker\Inventory\InventoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
