--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -258,24 +258,31 @@
     <Compile Include="AddToBaselinker.xaml.cs">
       <DependentUpon>AddToBaselinker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Builders\Baselinker\FetchBaselinkerData.cs" />
     <Compile Include="Builders\Emails\EmaiReportError.cs" />
     <Compile Include="Builders\SubiektInvoiceReceiptGenerator.cs" />
     <Compile Include="Composites\GetMissingInBaselinkerSubiektProducts.cs" />
     <Compile Include="Composites\BaselinkerSQLiteProductSyncComposite.cs" />
+    <Compile Include="Objects\Baselinker\Inventory\InventoryPriceGroup.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryProductListResponse.cs" />
+    <Compile Include="Objects\Baselinker\Inventory\InventoryManufacturers.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
+    <Compile Include="Objects\Baselinker\Products\CategoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
     <Compile Include="Objects\Baselinker\Storages\BaselinkerStoragesResponse.cs" />
     <Compile Include="Objects\SQLite\SQLiteConfigObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektBranchObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektCashRegisterObject.cs" />
-    <Compile Include="Objects\SQLite\SQLiteBaselinkerWarehouseObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteAssortmentObject.cs" />
-    <Compile Include="Objects\SQLite\SQLiteSubiektWarehouseObject.cs" />
+    <Compile Include="Objects\SQLite\SQLiteBaselinkerObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SQLite\AssortmentRepository.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerCategories.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerInventoryPriceGroups.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerInventoryManufacturers.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerInventories.cs" />
     <Compile Include="Validators\ConfigValidator.cs" />
   </ItemGroup>
   <ItemGroup>
