--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Builders\Baselinker\FetchBaselinkerData.cs" />
     <Compile Include="Builders\Emails\EmaiReportError.cs" />
     <Compile Include="Builders\SubiektInvoiceReceiptGenerator.cs" />
+    <Compile Include="Composites\BaselinkerSyncInventoryQtyService.cs" />
     <Compile Include="Composites\GetMissingInBaselinkerSubiektProducts.cs" />
     <Compile Include="Composites\BaselinkerSQLiteProductSyncComposite.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryPriceGroup.cs" />
@@ -268,6 +269,7 @@
     <Compile Include="Objects\Baselinker\Inventory\InventoryManufacturers.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
+    <Compile Include="Objects\Baselinker\Products\UpdateInventoryProductsStockResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\AddProductResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\CategoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
