--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -351,6 +351,7 @@
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductDataResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
     <Compile Include="Objects\Baselinker\Storages\BaselinkerStoragesResponse.cs" />
+    <Compile Include="Objects\SQLite\SQLiteBaselinkerOrderObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteConfigObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSaleDocsObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektLoginObject.cs" />
@@ -368,6 +369,7 @@
     <Compile Include="Repositories\SQLite\BaselinkerInventoryPriceGroups.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerInventoryManufacturers.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerInventories.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerOrderRepository.cs" />
     <Compile Include="Repositories\SQLite\SalesDocsRepository.cs" />
     <Compile Include="Repositories\SQLite\SubiektLogins.cs" />
     <Compile Include="SalesViewControl.xaml.cs">
