--- a/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
+++ b/BaselinkerSubiektConnector/BaselinkerSubiektConnector.csproj
@@ -344,6 +344,7 @@
     <Compile Include="Objects\Baselinker\Inventory\InventoryManufacturers.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryResponse.cs" />
     <Compile Include="Objects\Baselinker\Inventory\InventoryWarehouseResponse.cs" />
+    <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderStatusList.cs" />
     <Compile Include="Objects\Baselinker\Orders\BaselinkerOrderResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\UpdateInventoryProductsStockResponse.cs" />
     <Compile Include="Objects\Baselinker\Products\AddProductResponse.cs" />
@@ -352,6 +353,7 @@
     <Compile Include="Objects\Baselinker\Products\BaselinkerProductsListResponse.cs" />
     <Compile Include="Objects\Baselinker\Storages\BaselinkerStoragesResponse.cs" />
     <Compile Include="Objects\SQLite\SQLiteBaselinkerOrderObject.cs" />
+    <Compile Include="Objects\SQLite\SQLiteBaselinkerStatusObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteConfigObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSaleDocsObject.cs" />
     <Compile Include="Objects\SQLite\SQLiteSubiektLoginObject.cs" />
@@ -365,6 +367,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SQLite\AssortmentRepository.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerCategories.cs" />
+    <Compile Include="Repositories\SQLite\BaselinkerOrderStatusListRepository.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerInventoryWarehouses.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerInventoryPriceGroups.cs" />
     <Compile Include="Repositories\SQLite\BaselinkerInventoryManufacturers.cs" />
